--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="big-square"></div>
-        <div class="small-square"></div>
-        <div class="top-left-circle"></div>
-        <div class="top-right-circle"></div>
-        <div class="bottom-left-circle"></div>
-        <div class="bottom-right-circle"></div> 
+        <figure class="figure">
+            <div class="figure__big-square"></div>
+            <div class="figure__small-square"></div>
+            <div class="figure-cirlce figure-cirlce--top-left"></div>
+            <div class="figure-cirlce figure-cirlce--top-right"></div>
+            <div class="figure-cirlce figure-cirlce--bottom-left"></div>
+            <div class="figure-cirlce figure-cirlce--bottom-right"></div>
+    </figure>
     </div>
 </body>
 </html>
